refactor for checks